--- a/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
+++ b/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
@@ -53,6 +53,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BookStoreFacotry.cs" />
+    <Compile Include="PotterPriceCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PotterShoppingCartTest.cs" />
   </ItemGroup>
