--- a/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
+++ b/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
@@ -54,6 +54,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BookStoreFacotry.cs" />
+    <Compile Include="IPriceCalculator.cs" />
     <Compile Include="PotterPriceCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PotterShoppingCartTest.cs" />
