move book store to other file

--- a/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
+++ b/PotterShoppingCart.Tests/PotterShoppingCart.Tests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="BookStore.cs" />
     <Compile Include="BookStoreFacotry.cs" />
     <Compile Include="IPriceCalculator.cs" />
     <Compile Include="PotterPriceCalculator.cs" />
